--- a/Proyecto_Platzi_Video/main.html
+++ b/Proyecto_Platzi_Video/main.html
@@ -44,8 +44,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -60,8 +60,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -76,8 +76,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -92,8 +92,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -108,8 +108,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -124,8 +124,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -140,8 +140,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -156,8 +156,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -172,8 +172,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -188,8 +188,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -210,8 +210,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -226,8 +226,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -242,8 +242,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -258,8 +258,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -274,8 +274,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -290,8 +290,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -306,8 +306,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -322,8 +322,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -338,8 +338,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -354,8 +354,8 @@
             />
             <div class="carousel-item__details">
                 <div>
-                  <img src="../assets/icons8-play-64.png" class="play__button" alt="play">
-                  <img src="../assets/icons8-más-64.png" class="mas__button" alt="mas">
+                  <img src="./assets/icons8-play-64.png" class="play__button" alt="play">
+                  <img src="./assets/icons8-más-64.png" class="mas__button" alt="mas">
                 </div>
                 <p class="carousel-item__details--title">Titulo descriptivo</p>
                 <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
@@ -364,9 +364,9 @@
         </div>
       </section>
       <footer class="footer">
-        <a href="../components/error404.html">Use Terms</a>
-        <a href="../components/error404.html">Privacity declaration</a>
-        <a href="../components/error404.html">Help center</a>
+        <a href="./components/error404.html">Use Terms</a>
+        <a href="./components/error404.html">Privacity declaration</a>
+        <a href="./components/error404.html">Help center</a>
       </footer>
 </body>
 </html>
