--- a/Proyecto_Platzi_Video/main.html
+++ b/Proyecto_Platzi_Video/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css"/>
-    <title>PlatzVideo Project</title>
+    <title>WebVideo Project</title>
 </head>
 <body>
     <header class="header">
